# Graph-ARI

./: .gitignore  README.md  pyproject.toml
Data/STGNN/: [TUTORIAL]_Spatiotemporal_Graph_Neural_Networks_with_tsl.ipynb
graphari/: __init__.py  _data.py  _graph.py
graphari/data/: Epidemiological_Weeks.csv  edges.csv
mexari/: __init__.py  _data.py  _forecasting.py  _graph.py
mexari/data/: edges.csv
misc/: build_adjacency_distance_matrix.py
notebooks/: edge_label_classification.ipynb  graph_visualization.ipynb  node_classification.ipynb  spatiotemporal_forecasting_deep_graph_learning.ipynb  spatiotemporal_forecasting_multimodal_graph_learning.ipynb  visaulize.ipynb
