[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexari"
version = "0.1.0"
description = "Spatio-temporal NetworkX graph of ARI mortality rates across Mexican municipalities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mexari*"]

[tool.setuptools.package-data]
mexari = ["data/*.csv"]
