[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexari"
version = "0.3.0"
description = "Weekly municipal NetworkX graphs for geostatistical analysis in Mexico"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "shapely>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mexari*"]

[tool.setuptools.package-data]
mexari = ["data/*.csv", "data/*.geojson"]
